--- a/FaceEmotion/Classifier.ipynb
+++ b/FaceEmotion/Classifier.ipynb
@@ -1,11 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Face emotions analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This project aims to build a CNN classifier for face emotions. We will mainly be using the CK+ dataset for the classifier.\n",
+    "This classifier will be built around images first, but the overall goal is to developp a web app that can analyze faces in a video. A second head for localizing the face might be necessary later on. "
+   ]
   }
  ],
  "metadata": {
