add and modify README

--- a/FaceEmotion/Classifier.ipynb
+++ b/FaceEmotion/Classifier.ipynb
@@ -169,7 +169,7 @@
     "4. fear\n",
     "5. happy\n",
     "6. sadness\n",
-    "7. surprise\n"
+    "7. surprise"
    ]
   },
   {
@@ -580,6 +580,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0. neutral\n",
+    "1. anger\n",
+    "2. contempt\n",
+    "3. disgust\n",
+    "4. fear\n",
+    "5. happy\n",
+    "6. sadness\n",
+    "7. surprise\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 183,
    "metadata": {
@@ -603,7 +617,7 @@
     }
    ],
    "source": [
-    "interp.plot_top_losses(9)\n"
+    "interp.plot_top_losses(9)"
    ]
   },
   {
